# wmg-senior-python-exercise

./: .gitignore  README.md  pyproject.toml
camera_events/: __init__.py  aggregator.py  alerts.py  basics.py  models.py
tests/: test_camera_basics.py  test_camera_event_aggregator.py  test_child_alone_alert_detector.py
