[project]
name = "wmg-camera-events-exercise"
version = "1.0.0"
description = "Backend interview exercises for senior Python candidates — Camera Events."
requires-python = ">=3.10"

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
